--- a/nimbus/base/templates/status_header.html
+++ b/nimbus/base/templates/status_header.html
@@ -1,6 +1,5 @@
 <div class="status_header {{status_header.status_name}}">
     <div class="inner_status_header">
-        {{status_header.status_message}}<br/>
-        <small><a href="/base/historico" style="color: blue">Histórico</a></small>
+        {{status_header.status_message}}
     </div>
 </div>
