--- a/nimbus/media/lib/css/style.css
+++ b/nimbus/media/lib/css/style.css
@@ -1318,10 +1318,11 @@ a:hover {
 }
 
 .inner_status_header {
-    margin-top: 8px;
-    padding-left: 40px;
-    color: #666;
-    line-height: 1em;
+    color: #666666;
+    font-size: 10px;
+    line-height: 1.2em;
+    margin-top: 7px;
+    padding-left: 37px;
 }
 
 #header .align_right {
