Adicionando pagina para visualizar processos.

--- a/nimbus/base/templates/base.html
+++ b/nimbus/base/templates/base.html
@@ -141,6 +141,7 @@
                             <li><a href="/system/security_copy/">Cópia de segurança</a></li>
                             <li><a href="/recovery/start">Recuperação do sistema</a></li>
                             <li><a href="/system/umount">Remover dispositivo externo</a></li>
+                            <li><a href="/system/pid_history/">Monitorar processos internos</a></li>
                         </ul>
 					</li>
 					<li class="nobg"><a href="#">Configurações</a>
