--- a/nimbus/media/lib/css/style.css
+++ b/nimbus/media/lib/css/style.css
@@ -62,6 +62,10 @@ a:hover {
     float: right;
 }
 
+.no_margin {
+    margin: 0 !important;
+}
+
 /* Header */
 
 #header {
@@ -808,8 +812,32 @@ a:hover {
 	margin-right: 10px;
 	vertical-align: middle;
 	}
+
+a.submit {
+    display: block;
+    width: 85px;
+	height: 30px;
+	line-height: 30px;
+	background: url(../images/btns.gif) top center no-repeat;
+	border: 0;
+	font-family: "Helvetica Neue", "Trebuchet MS", Arial, sans-serif;
+	font-size: 14px;
+	font-weight: normal;
+	text-transform: uppercase;
+	color: #fff;
+	text-shadow: 1px 1px 0 #0a5482;
+	text-align: center;
+	cursor: pointer;
+	margin-right: 10px;
+	vertical-align: middle;
+	}
 	
 .block form input.submit:hover {
+	background: url(../images/btns_.gif) top center no-repeat;
+	text-shadow: 1px 1px 0 #b55f10;
+	}
+
+a.submit:hover {
 	background: url(../images/btns_.gif) top center no-repeat;
 	text-shadow: 1px 1px 0 #b55f10;
 	}
