--- a/nimbus/storages/templates/storages_view.html
+++ b/nimbus/storages/templates/storages_view.html
@@ -105,10 +105,9 @@
         
         <div class="block-executados">
             <h3>Espaço em disco</h3>
-            <div class="" style="width: 200px; border: 1px solid green" title="{{espaco_em_disco}} de ocupação.">
-                <div class="" style="width: {{espaco_em_disco}}; background: green; height: 20px"></div>
-            </div>
-            <small>{{espaco_em_disco}} de ocupação</small>
+            {% with espaco_em_disco as value %}
+		        {% include "bar_chart.html" %}
+		    {% endwith %}
             <div class="clear"></div>
 		    <p></p>
         </div>
