FIX: redirecionamento da ediçaão de computadores não ativos

--- a/nimbus/computers/templates/computers_add.html
+++ b/nimbus/computers/templates/computers_add.html
@@ -41,7 +41,7 @@
                         <img src="/media/icons/computer.png" style="float: left; height: 32px; padding-right: 10px" />
                         <h3 class="name" style="margin: 0 0 -5px 0; padding: 0">{{comp.name}}</h3>
                         <small class="ip">{{comp.address}} - {{comp.operation_system|title}}</small>
-                        <p style="font-size: 10px; margin: 0px; padding: 0; line-height: 1.4em"><a href="/computers/{{comp.id}}/edit/">Editar</a> - <a href="/computers/{{comp.id}}/delete/">Remover</a></p>
+                        <p style="font-size: 10px; margin: 0px; padding: 0; line-height: 1.4em"><a href="/computers/{{comp.id}}/edit_no_active/">Editar</a> - <a href="/computers/{{comp.id}}/delete/">Remover</a></p>
                     </div>
                 </div>
                 <div class="right" style="float: right; width: 600px">
