Corrigindo a formatacao dos botoes do recovery.

--- a/nimbus/recovery/templates/recovery_instancenameerror.html
+++ b/nimbus/recovery/templates/recovery_instancenameerror.html
@@ -18,7 +18,7 @@
         <p>{{error}}</p>
 
         <form action="/recovery/start" method="get">
-            <button type="submit"><span>Ok</span></button>
+            <input type="submit" class="submit" value="OK" />
         </form>
         
         <p></p>
