--- a/nimbus/recovery/templates/recovery_recover_databases.html
+++ b/nimbus/recovery/templates/recovery_recover_databases.html
@@ -19,7 +19,7 @@
         <form action="/recovery/recover_databases/" method="post">
             <input type="hidden" name="localsource" value="{{ localsource }}"/>
             <input type="hidden" name="device" value="{{ device }}"/>
-            <button type="submit"><span>Ok</span></button>
+            <input type="submit" class="submit" value="OK" />
         </form>
     
         <p></p>
