--- a/nimbus/recovery/templates/recovery_select_instance_name.html
+++ b/nimbus/recovery/templates/recovery_select_instance_name.html
@@ -23,7 +23,7 @@
           {%endfor%}
           <input type="hidden" name="localsource" value="{{ localsource }}"/>
           <input type="hidden" name="device" value="{{ device }}"/>
-          <button type="submit"><span>Ok</span></button>
+          <input type="submit" class="submit" value="OK" />
         
         <p></p>
     </div>
