--- a/nimbus/recovery/templates/recovery_select_source.html
+++ b/nimbus/recovery/templates/recovery_select_source.html
@@ -19,7 +19,7 @@
         <form action="/recovery/select_source/" method="post">
           <input type="radio" name="source" value="offsite" /> Nimbus Cloud Backup <br />
           <input type="radio" name="source" value="externalstorage" /> HD externo <br /> <br />
-          <button type="submit"><span>Prosseguir</span></button> <br />
+          <input class="submit mid" type="submit" value="Prosseguir" /><br />
         </form>
     
         <p></p>
