--- a/nimbus/computers/templates/computers_list.html
+++ b/nimbus/computers/templates/computers_list.html
@@ -34,6 +34,9 @@
         <p><a href="/computers/add">Adicionar computador</a></p>
         <div class="computers">
         {% for comp in computers %}
+            {% ifchanged comp.groups.all %}
+            <h2>{% for g in comp.groups.all %}{{ g.name }}{% if not forloop.last %}, {% endif %}{% endfor %}</h2>
+            {% endifchanged %}
             <div class="computer {% if not comp.active %}desativado{% endif %}" style="padding: 20px; -moz-border-radius: 5px; background: #EEE; margin-bottom: 20px">
                 <div class="left" style="float: left; width: 250px">
                     <div class="title">
